--- a/Electric_Force/Electric_Force.tex
+++ b/Electric_Force/Electric_Force.tex
@@ -144,8 +144,6 @@ Charge $q_1$ is at $(x,y)=(-a,a)$ and charge $q_2$ is at $(a, -a)$. Both charges
 
 \end{enumerate}
 
-\input{figures/grid.tikz}
-
 \ifsolutions
 {\bf Solution}
 
@@ -155,15 +153,19 @@ Charge $q_1$ is at $(x,y)=(-a,a)$ and charge $q_2$ is at $(a, -a)$. Both charges
 
       \item $\bfvec{F}_{1\mbox{ on } 2} = F_{1\mbox{ on } 2}(\cos 45^\circ \ihat - \sin 45^\circ \jhat)$
 
-      \item 1.: No change; 2. $\bfvec{F}_{1\mbox{ on } 2} = F_{1\mbox{ on } 2}(-\cos 45^\circ \ihat + \sin 45^\circ \jhat)$
+      \item 1.: No change; 2. Assuming ``Opposite signs" means that one is positive and one is negative and still $|q_1|=|q_2|=q$, $\bfvec{F}_{1\mbox{ on } 2} = F_{1\mbox{ on } 2}(-\cos 45^\circ \ihat + \sin 45^\circ \jhat)$
 
     \end{enumerate}
 \else
 
+\input{figures/grid.tikz}
+
 \newpage
 \fi
 \ifsolutions\else
-\newpage
+\input{figures/grid.tikz}
+
+  \newpage
 \fi
 
 \section{Problem II}
@@ -180,8 +182,6 @@ Charge $q_1$ is at $(x,y)=(-a,a)$ and charge $q_2$ is at $(a, 0)$. Charge $q_1$ 
 
 \end{enumerate}
 
-\input{figures/grid.tikz}
-
 \ifsolutions
 {\bf Solution}
 
@@ -191,11 +191,20 @@ Charge $q_1$ is at $(x,y)=(-a,a)$ and charge $q_2$ is at $(a, 0)$. Charge $q_1$ 
 
       \item $\ds F_{1\mbox{ on } 2}=k\frac{|q_1q_2|}{r^2}=\frac{k|qq|}{(\sqrt{(2a)^2+a^2})^2}=\frac{kq^2}{5a^2}$
 
-      \item $\bfvec{F}_{1\mbox{ on } 2} = F_{1\mbox{ on } 2}(\sin \theta^\circ \ihat - \cos \theta\jhat)$, where $\theta=\tan^{-1}(2) = 63.4^\circ$.
+      \item $\bfvec{F}_{1\mbox{ on } 2} = F_{1\mbox{ on } 2}(\sin \theta \ihat - \cos \theta\jhat)$, where $\theta=\tan^{-1}(2) = 63.4^\circ$.
 
-      \item 1.: No change; 2. $\bfvec{F}_{1\mbox{ on } 2} = F_{1\mbox{ on } 2}(-\sin \theta^\circ \ihat + \cos \theta\jhat)$; $\theta=63.4^\circ$
+                Alternatively, from the diagram on the right, $\sin\theta = 2a/\sqrt{5}a$ and $\cos\theta = 1a/\sqrt{5}a$, so 
+                $\ds\bfvec{F}_{1\mbox{ on } 2} = F_{1\mbox{ on } 2}\left(\frac{2}{\sqrt{5}}\ihat - \frac{1}{\sqrt{5}}\jhat\right)$.
+
+      \item 1.: No change; 2. Assuming ``Opposite signs" means that one is positive and one is negative and still $|q_1|=|q_2|=q$, $\bfvec{F}_{1\mbox{ on } 2} = F_{1\mbox{ on } 2}(-\sin \theta \ihat + \cos \theta\jhat)$; $\theta=63.4^\circ$.
 
     \end{enumerate}
+\else
+
+\input{figures/grid.tikz}
+\fi
+\ifsolutions\else
+\input{figures/grid.tikz}
 \fi
 
 \section{Problem III}
@@ -212,20 +221,36 @@ Charge $q_1$ is at $(x,y)=(-a,0)$ and charge $q_2$ is at $(0, 3a)$. Charge $q_1$
 
 \end{enumerate}
 
-\input{figures/grid.tikz}
-
 \ifsolutions
 {\bf Solution}
+\input{figures/Two_Charges-d.tikz}
 
     \begin{enumerate}
 
       \item $r=\sqrt{a^2+(3a)^2}$, $F=k|q(-q)|/r^2=kq^2/10a^2$
 
-      \item $\bfvec{F}=-F\sin\theta\ihat - F\cos\theta\jhat$, where $\theta=\tan^{-1}(1/3)=18.4^\circ$
+      \item $\bfvec{F}=-F\sin\theta\ihat - F\cos\theta\jhat$, where $\theta=\tan^{-1}(1/3)=18.4^\circ$.
 
-      \item 1.: No change; 2.: $\bfvec{F}=+F\sin\theta\ihat + F\cos\theta\jhat$
+                Alternatively, from the diagram, $\sin\theta = a/\sqrt{10}a$ and $\cos\theta = 3a/\sqrt{10}a$, so 
+                $\ds\bfvec{F}_{1\mbox{ on } 2} = F\left(-\frac{1}{\sqrt{10}}\ihat - \frac{3}{\sqrt{10}}\jhat\right)$.
+
+      \item 1.: No change; 2.: Note: the problem statement should have been ``if both charges have the \emph{same} sign" (the charges were given to have opposite signs). In this case: $\bfvec{F}_{1\mbox{ on } 2}=+F\sin\theta\ihat + F\cos\theta\jhat$.
 
     \end{enumerate}
+\else
+
+\input{figures/grid.tikz}
+\fi
+\ifsolutions\else
+\input{figures/grid.tikz}
+\fi
+
+\section{Problem IV}
+
+Charge $q_1$ is at $(x,y)=(x_1,y_1)$ and charge $q_2$ is at $(x_2, y_2)$. Find the magnitude of the force of $q_1$ on $q_2$.
+
+\ifsolutions
+{\bf Solution}: $F=kq^2/\left((x_2-x_1)^2 + (y_2-y_1)^2\right)$. Make sure that you can justify this with a diagram.
 \fi
 
 \end{document}
