--- a/Electric_Field/Electric_Field.tex
+++ b/Electric_Field/Electric_Field.tex
@@ -81,7 +81,7 @@
 
 This activity covers topics in Section 21.4 of Young and Freedman 2015, 14th Edition.
 
-The electric field vector, $\bfvec{E}$, is a quantity assigned to a point in space. Given this quantity, we can compute the force on a charge $Q$ will experience if it is placed at that point in space using the equation $\bfvec{F}=Q\bfvec{E}$. The direction of $\mathbf{E}$ is also the direction a charge will begin to move if released from rest.
+The electric field vector, $\bfvec{E}$, is a quantity assigned to a point in space. Given this quantity, we can compute the force on a charge $Q$ will experience if it is placed at that point using the equation $\bfvec{F}=Q\bfvec{E}$. The direction of $\bfvec{E}$ is also the direction a charge will begin to move if released from rest.
 
 To find $\bfvec{E}$ at any point in space, 
 compute the force $\bfvec{F}$ due to all other charges on a hypothetical (or ``test") charge $q_o$ at a point where you want to know $\bfvec{E}$. To find $\bfvec{E}$ at that point, divide $\bfvec{F}$ by $q_o$.
@@ -94,7 +94,7 @@ compute the force $\bfvec{F}$ due to all other charges on a hypothetical (or ``t
 
 \section{Example I}
 
-Charge $q_1$ is at $(x,y)=(-a,-a)$. Find the electric field at $(x,y)=(a,a)$ in the form $\bfvec{E}=E_x\ihat + E_y\jhat$. Also, find $E$. (Note that $E$ and $|\mathbf{E}|$ are used interchangebly.)
+Charge $q_1$ is at $(x,y)=(-a,-a)$. Find the electric field at $(x,y)=(a,a)$ in the form $\bfvec{E}=E_x\ihat + E_y\jhat$. Also, find $E$. (Note that $E$ and $|\bfvec{E}|$ are used interchangebly.)
 
 \textbf{Solution}
 
@@ -104,19 +104,25 @@ To find the electric field at a point in space, we put a hypothetical ``test" ch
 \bfvec{E} = \frac{\bfvec{F}}{q_o}
 \end{equation}
 
-The force a charge $q_1$ at $(x,y)=(-a,-a)$ exerts on a charge $q_2$ at $(x,y)=(a,a)$ was computed in a previous activity. We can use that answer after replacing $q_2$ with $q_o$. The result is
+The force a positive charge $q_1$ at $(x,y)=(-a,-a)$ exerts on a positive charge $q_2$ at $(x,y)=(a, a)$ was computed in a previous activity.
 
 \begin{equation}
-\bfvec{F}_{q_1\text{ on } q_o}=k\frac{|q_1q_o|}{8a^2}(\cos 45^\circ \ihat + \sin 45^\circ \jhat)
+\bfvec{F}_{q_1\text{ on } q_2}=k\frac{|q_1q_2|}{8a^2}(\cos 45^\circ \ihat + \sin 45^\circ \jhat)
 \end{equation}
 
-We also found that this equation applies when $q_1$ and $q_o$ are both positive or both are negative. If $q_1$ was positive and $q_o$ was negative, or vice-versa, we found the sign changed:
+We also found that this equation applies when $q_1$ and $q_2$ are both positive or both are negative. If $q_1$ was positive and $q_2$ was negative, or vice-versa, we found the sign changed:
 
 \begin{equation}
-\bfvec{F}_{q_1\text{ on } q_o}=-k\frac{|q_1q_o|}{8a^2}(\cos 45^\circ \ihat + \sin 45^\circ \jhat)
+\bfvec{F}_{q_1\text{ on } q_2}=-k\frac{|q_1q_2|}{8a^2}(\cos 45^\circ \ihat + \sin 45^\circ \jhat)
 \end{equation}
 
 Based on this, we can write a single equation for all possibilities:
+
+\begin{equation}
+\bfvec{F}_{q_1\text{ on } q_2}=k\frac{q_1q_2}{8a^2}(\cos 45^\circ \ihat + \sin 45^\circ \jhat)
+\end{equation}
+
+If we replace $q_2$ with $q_o$, this is
 
 \begin{equation}
 \bfvec{F}_{q_1\text{ on } q_o}=k\frac{q_1q_o}{8a^2}(\cos 45^\circ \ihat + \sin 45^\circ \jhat)
@@ -124,23 +130,41 @@ Based on this, we can write a single equation for all possibilities:
 
 The electric field at the location of $q_o$ is then 
 
-$\ds\bfvec{E}_{\text{at }(a,a) \text{ due to }q_1} = \frac{\bfvec{F}}{q_o} = \frac{kq_1}{8a^2}(\cos 45^\circ \ihat + \sin 45^\circ \jhat) =\frac{kq_1}{8a^2}\left[\frac{1}{\sqrt{2}}\ihat + \frac{1}{\sqrt{2}}\jhat\right]$
+$\ds\bfvec{E}_{\text{at }(a,a) \text{ due to }q_1} = \frac{\bfvec{F}}{q_o} = \frac{kq_1}{8a^2}(\cos 45^\circ \ihat + \sin 45^\circ \jhat) =\frac{kq_1}{8a^2}\left[\frac{1}{\sqrt{2}}\ihat + \frac{1}{\sqrt{2}}\jhat\right]$,
 
-where the fact that $\sin 45^\circ=\cos 45^\circ=1/\sqrt{2}$ was used.
+where the fact that $\sin 45^\circ=\cos 45^\circ=1/\sqrt{2}$ was used. The magnitude is $E=\sqrt{E_x^2+E_y^2}=k|q_1|/8a^2$.
 
-Sign check: When computing electric fields and forces, it is easy to make a sign error. The electric field vector points in the direction a positive charge will move if released there from rest. Suppose $q_1$ is positive. Our equation predicts that a charge released from rest at $(a,a)$ will move up and to the right. Suppose $q_1$ is negative. Our equation predicts that the charge will move down and to the left. This is consistent with the fact that like charges repel and unlike charges attract.
+Sign check: When computing electric fields and forces, it is easy to make a sign error. The electric field vector points in the direction a positive charge will move if released there from rest. Suppose $q_1$ is positive. Our equation predicts that a positive charge released from rest at $(a, a)$ will move up and to the right. Suppose $q_1$ is negative. Our equation predicts that a positive charge will move down and to the left. This is consistent with the fact that like charges repel and unlike charges attract.
 
 \section{Problem I}
 
-Charge $q_1$ is at $(x,y)=(-a,a)$. At $(x,y)=(a, 0)$, find $\mathbf{E}$ in the form $\bfvec{E}=E_x\ihat + E_y\jhat$. Check signs of the components of $\mathbf{E}$ using the technique used in Example I. Also, find $E$.
+Charge $q_1$ is at $(x,y)=(-a,a)$. At $(x,y)=(a, 0)$, find $\bfvec{E}$ in the form $\bfvec{E}=E_x\ihat + E_y\jhat$. Check signs of the components of $\bfvec{E}$ using the technique used in Example I. Also, find $E$.
 
 \input{../Electric_Force/figures/grid.tikz}
+
+\ifsolutions
+{\bf Answer}:
+
+From Problem II on the Electric Force Activity, if $q_2$ is at $(x,y)=(a, 0)$ (and using the arguments in the previous example to drop the absolute value sign),
+
+\begin{equation}
+\bfvec{F}_{q_1\text{ on } q_2}=k\frac{q_1q_2}{5a^2}\left(\frac{2}{\sqrt{5}}\ihat -\frac{2}{\sqrt{5}}\jhat\right)
+\end{equation}
+
+Replacing $q_2$ with a test charge $q_o$,
+
+\begin{equation}
+\bfvec{F}_{q_1\text{ on } q_o}=k\frac{q_1q_o}{5a^2}\left(\frac{2}{\sqrt{5}}\ihat -\frac{2}{\sqrt{5}}\jhat\right)
+\end{equation}
+
+$\ds\bfvec{E}_{\text{at }(a,0) \text{ due to }q_1} = \frac{\bfvec{F}}{q_o}=\frac{kq_1}{5a^2}\left(\frac{2}{\sqrt{5}}\ihat -\frac{2}{\sqrt{5}}\jhat\right)$
+\fi
 
 \newpage
 
 \section{The $\rhat$ Unit Vector}
 
-Previously, when computing the electric force between two charges, you used the formula $F=k{|q_1q_2|}/{r^2}$ to find the magnitude of the force and then used a diagram to write $\mathbf{F}$ in the form $\bfvec{F}=F_x\ihat + F_y\jhat$. A similar process was used for computing $\bfvec{E}$ above (because we calculated $\mathbf{F}$ as part of the process). The textbook provides an equation for the electric field that requires a slightly different calculation method.
+Previously, when computing the electric force between two charges, you used the formula $F=k{|q_1q_2|}/{r^2}$ to find the magnitude of the force and then used a diagram to write $\bfvec{F}$ in the form $\bfvec{F}=F_x\ihat + F_y\jhat$. A similar process was used for computing $\bfvec{E}$ above (because we calculated $\bfvec{F}$ as part of the process). The textbook provides an equation for the electric field that requires a slightly different calculation method.
 
 The equation for the electric field using a unit vector is
 
@@ -148,17 +172,17 @@ The equation for the electric field using a unit vector is
 \bfvec{E}_{\text{due to }q_1}=kq_1\frac{\rhat}{r^2}\thinspace,
 \end{equation}
 
-where $\rhat$ is the unit vector that points from the position of $q_1$ to the point in space where we want to know $\mathbf{E}$, and $r$ is the distance between $q_1$ and that point.
+where $\rhat$ is the unit vector that points from the position of $q_1$ to the point in space where we want to know $\bfvec{E}$, and $r$ is the distance between $q_1$ and that point.
 
 To find $\rhat$, 
 
 \begin{enumerate}
 
-  \item draw a vector, $\mathbf{r}$ from $q_1$ to the point in space where you want to know $\mathbf{E}$;
+  \item draw a vector, $\bfvec{r}$ from $q_1$ to the point in space where you want to know $\bfvec{E}$;
 
-  \item Write $\mathbf{r}$ in the form $\mathbf{r}=r_x\ihat+r_y\jhat$; then
+  \item Write $\bfvec{r}$ in the form $\bfvec{r}=r_x\ihat+r_y\jhat$; then
 
-  \item $\rhat=\mathbf{r}/r$, where $r=\sqrt{r_x^2+r_y^2}$.
+  \item $\rhat=\bfvec{r}/r$, where $r=\sqrt{r_x^2+r_y^2}$.
 
 \end{enumerate}
 
@@ -180,10 +204,10 @@ Substitution gives
 
 which is the same result obtained in the previous example, as expected.
 
-To calculate $\mathbf{E}$, we can use
+To calculate $\bfvec{E}$, we can use
 
 \begin{equation}
-|\mathbf{E}|=E=\sqrt{E_x^2+E_y^2}
+|\bfvec{E}|=E=\sqrt{E_x^2+E_y^2}
 \end{equation}
 
 and plug in $E_x=k\frac{q_1}{8a^2}\frac{1}{\sqrt{2}}$ and $E_y=k\frac{q_1}{8a^2}\frac{1}{\sqrt{2}}$ and use $\sqrt{c^2}=|c|$ (where $c$ is a real number) to show that $E=k|q_1|/{8a^2}$. There is an easier way. Taking the magnitude of both sides of
@@ -198,15 +222,26 @@ $\ds|\bfvec{E}|=k|q_1|\frac{1}{r^2}=\frac{k|q_1|}{8a^2},\thickspace$ as before.
 
 \section{Problem II}
 
-Charge $q_1$ is at $(x,y)=(-a,a)$. Find the electric field at $(x,y)=(a, 0)$ using $\bfvec{E}_{\text{at }(a,0)\text{ due to }q_1}=kq_1{\rhat}/{r^2}$. Check signs of the components of $\mathbf{E}$ using the technique used in Example I. Also, find $E$.
+Charge $q_1$ is at $(x,y)=(-a,a)$. Find the electric field at $(x,y)=(a, 0)$ using $\bfvec{E}_{\text{at }(a,0)\text{ due to }q_1}=kq_1{\rhat}/{r^2}$. Check signs of the components of $\bfvec{E}$ using the technique used in Example I. Also, find $E$.
 
 \input{../Electric_Force/figures/grid.tikz}
+
+\ifsolutions
+{\bf Answer}:
+
+$\bfvec{r}=2a\ihat-a\jhat$,
+$\quad$
+$\ds\rhat=\frac{2}{\sqrt{5}}\ihat-\frac{1}{\sqrt{5}}\jhat$,
+$\quad$ $r^2=5a^2$
+
+$\ds\bfvec{E}_{\text{at }(a,0) \text{ due to }q_1}=\frac{kq_1}{5a^2}\left(\frac{2}{\sqrt{5}}\ihat -\frac{2}{\sqrt{5}}\jhat\right)$, which matches the solution to Problem I, as expected.
+\fi
 
 \newpage
 
 \section{Problem III - Superposition}
 
-In the previous examples, only one charge was responsible for creating the electric field $\bfvec{E}$. When there are more charges, superposition can be used to find the total electric field by summing $\mathbf{E}$ due to each charge.
+In the previous examples, only one charge was responsible for creating the electric field $\bfvec{E}$. When there are more charges, superposition can be used to find the total electric field by summing $\bfvec{E}$ due to each charge.
 
 Charge $q_1 = +q$ is at $(x, y) = (a, 0)$, charge $q_2 = +q$ is at $(x, y) = (-a, 0)$, and charge $q_3 = -q$ is at $(x, y) = (0, a)$. Assume that $q$ is a positive number.
 
@@ -216,7 +251,16 @@ Charge $q_1 = +q$ is at $(x, y) = (a, 0)$, charge $q_2 = +q$ is at $(x, y) = (-a
 
 \end{enumerate}
 
+\ifsolutions
+
+\input{figures/Superposition.tikz?1675127848184?1675127853632}
+\else
+
 \input{../Electric_Force/figures/grid.tikz}
+\fi
+\ifsolutions\else
+\input{../Electric_Force/figures/grid.tikz}
+\fi
 
 \begin{enumerate}
 
@@ -224,7 +268,15 @@ Charge $q_1 = +q$ is at $(x, y) = (a, 0)$, charge $q_2 = +q$ is at $(x, y) = (-a
 
 \end{enumerate}
 
+\ifsolutions
+There is no charge at the origin. (The electric field can be used to find the force on a charge \emph{if} it was placed at the origin.)
+\else
+
 \vskip 24pt
+\fi
+\ifsolutions\else
+\vskip 24pt
+\fi
 
 In the following, 
 
@@ -232,53 +284,87 @@ In the following,
 
   \item[3.] Find the electric field at the origin due to $q_1$. Write your answer in the form $\bfvec{E}_1=E_{x1}\ihat + E_{y1}\jhat$.
 
-\end{enumerate}
+            \ifsolutions
+            {\bf Answer}: $\ds\bfvec{E}_1=-\frac{kq}{a^2}\ihat$
+            \else
 
-\vskip 72pt
-
-\begin{enumerate}
+            \vskip 72pt
+            \fi
+            \ifsolutions\else
+            \vskip 72pt
+            \fi
 
   \item[4.] Find the electric field at the origin due to $q_2$. Write your answer in the form $\bfvec{E}_2=E_{x2}\ihat + E_{y2}\jhat$.
 
-\end{enumerate}
+            \ifsolutions
+            {\bf Answer}: $\ds\bfvec{E}_2=+\frac{kq}{a^2}\ihat$
+            \else
 
-\vskip 72pt
-
-\begin{enumerate}
+            \vskip 72pt
+            \fi
+            \ifsolutions\else
+            \vskip 72pt
+            \fi
 
   \item[5.] Find the electric field at the origin due to $q_3$. Write your answer in the form $\bfvec{E}_3=E_{x3}\ihat + E_{y3}\jhat$.
 
-\end{enumerate}
+            \ifsolutions
+            {\bf Answer}: $\ds\bfvec{E}_3=+\frac{kq}{a^2}\jhat$
+            \else
 
-\vskip 72pt
+            \vskip 72pt
+            \fi
+            \ifsolutions\else
+            \vskip 72pt
+            \fi
 
-\begin{enumerate}
+  \item[6.] Find the total electric field at the origin by adding $\bfvec{E}_1$, $\bfvec{E}_2$, and $\bfvec{E}_3$. Write your answer in the form $\bfvec{E}=E_{x}\ihat + E_{y}\jhat$.
 
-  \item[6.] Find the total electric field at the origin by adding $\mathbf{E}_1$, $\mathbf{E}_2$, and $\mathbf{E}_3$. Write your answer in the form $\bfvec{E}=E_{x}\ihat + E_{y}\jhat$.
+            \ifsolutions
+            {\bf Answer}: $\ds\bfvec{E}=+\frac{kq}{a^2}\jhat$
+            \else
 
-\end{enumerate}
-
-\vskip 72pt
-
-\begin{enumerate}
+            \vskip 72pt
+            \fi
+            \ifsolutions\else
+            \vskip 72pt
+            \fi
 
   \item[7.] Will your answers to 3.--6. change if the problem had asked for the electric field at a different position? If so, which answers?
 
-\end{enumerate}
+            \ifsolutions
+            Yes, all answers. The electric field at a given location due to each charge depends on the distance to the location. If the location changes, the distance changes.
+            \else
 
-\vskip 72pt
-
-\begin{enumerate}
+            \vskip 72pt
+            \fi
+            \ifsolutions\else
+            \vskip 72pt
+            \fi
 
   \item[8.] Find the electric field at the origin if charge $q_1=2q$ (instead of $q$).
 
-\end{enumerate}
+            \ifsolutions
+            {\bf Answer}: $\ds\bfvec{E}=-\frac{kq}{a^2}\ihat+\frac{kq}{a^2}\jhat$
+            \else
 
-\vskip 144pt
-
-\begin{enumerate}
+            \vskip 72pt
+            \fi
+            \ifsolutions\else
+            \vskip 72pt
+            \fi
 
   \item[9.] Find the electric field at the origin if charge $q_1=-2q$ (instead of $q$).
+
+            \ifsolutions
+            {\bf Answer}: $\ds\bfvec{E}=+\frac{3kq}{a^2}\ihat+\frac{kq}{a^2}\jhat$
+            \else
+
+            \vskip 72pt
+            \fi
+            \ifsolutions\else
+            \vskip 72pt
+            \fi
 
 \end{enumerate}
 
